# Mandelbrot-Explorer

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/app/: CMakeLists.txt  app-bmp.cpp  app-qt.cpp
src/lib/: CMakeLists.txt  mandelbrot.cpp  mandelbrot.h
src/lib/color/: color-strategy-iteration.cpp  color-strategy-iteration.h  color-strategy-smooth.cpp  color-strategy-smooth.h  color-strategy-wavelength.cpp  color-strategy-wavelength.h  color-strategy.h  color.h
src/lib/output/: output-device-bmp.cpp  output-device-bmp.h  output-device-qt.cpp  output-device-qt.h  output-device.h
src/lib/threading/: mandelbrot-thread-qt.cpp  mandelbrot-thread-qt.h  thread-pool.cpp  thread-pool.h
src/ui/: CMakeLists.txt  mandelbrot-view.cpp  mandelbrot-view.h  window.cpp  window.h  window.ui
